--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'kotlin-in-action'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.1.2-2'
+    ext.kotlin_version = '1.2.50'
 
     repositories {
         mavenCentral()
